overflow bug

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,5 @@
 body {
-  min-height: 100vh;
+  max-height: 100vh;
   color: var(--color-text);
   background-image: linear-gradient(
     109.6deg,
